# uv-app-template

churn-lib/: .gitignore  README.md  docker-compose.yml  pyproject.toml
churn-lib/src/churn_lib/: __init__.py  _logging.py  data_generator.py  default_config.yaml  drift.py  inference.py  pipeline.py  trainer.py  validate.py
churn-lib/tests/: conftest.py  test_data_generator.py  test_drift.py  test_inference.py  test_pipeline.py  test_trainer.py  test_validate.py
ml-app/: .dockerignore  Dockerfile  README.md  docker-compose.yml  mlflow.db  pyproject.toml
ml-app/app/: main.py
ml-app/app/api/v1/: router.py
ml-app/app/api/v1/endpoints/churn/: drift.py  predict.py  train.py
ml-app/app/api/v1/endpoints/greetings/: hello.py
ml-app/app/core/: config.py  dependencies.py  errors.py
ml-app/app/schemas/: churn.py
ml-app/app/services/: greeter.py
ml-app/app/services/churn/: drift.py  inference.py  training.py
ml-app/models/20260313_132945/: config.json  metrics.json  threshold_curve.json
ml-app/tests/: conftest.py  test_dependencies.py  test_drift.py  test_health.py  test_inference_service.py  test_predict.py  test_train.py
